# MoFox_Bot

./: .gitignore  Dockerfile  EULA.md  FIXES_SUMMARY.md  PRIVACY.md  README.md  SMART_PROMPT_INTEGRATION.md  TODO.md  __main__.py  app_20250924_114845.log.jsonl  app_20250924_115355.log.jsonl  bot.py  migration_script.py  optimization_report.md  pyproject.toml  pyrightconfig.json  requirements.txt  test_anti_injection_fixes.py  test_anti_injection_model_config.py  test_anti_injection_new.py  test_fixed_anti_injection_config.py  test_llm_model_config.py  test_logger_names.py  test_model_config_consistency.py  test_plugin_config_fix.py  test_quote_extraction.py  ui_log_adapter.py  消息处理流程.md
changelogs/: changelog.md
docs/: CONTRIBUTE.md  MCP_SIMPLE_GUIDE.md  MCP_SSE_INTEGRATION.md  MCP_SSE_QUICKSTART.md  MCP_SSE_USAGE.md  MCP_TOOLS_INTEGRATION.md  PERMISSION_SYSTEM.md  mcp-sse-guide.md  memory_system_design_v2.md  model_configuration_guide.md  schedule_enhancement (1).md
rust_video/: Cargo.toml  pyproject.toml  rust_video.pyi
rust_video/src/: lib.rs
scripts/: convert_sqlalchemy_models.py  expression_stats.py  interest_value_analysis.py  log_viewer_optimized.py  lpmm_learning_tool.py  manifest_tool.py  mongodb_to_sqlite.py  rebuild_metadata_index.py  run_multi_stage_smoke.py  text_length_analysis.py  update_prompt_imports.py
src/: __init__.py  main.py
src/chat/utils/rust-video/: Cargo.toml  README.md  api_server.py  config.py  config.toml  start_server.py
src/chat/utils/rust-video/src/: main.rs
template/: bot_config_template.toml  model_config_template.toml  (+1 more)
(+449 files in other folders)
